# jupyterlab-gitlab

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  jupyterlab_gitlab.py  package.json  pyproject.toml  setup.py  setupbase.py
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
jupyter-config/jupyter_notebook_config.d/: jupyterlab_gitlab.json
jupyter-config/server-config/: jupyterlab-gitlab.json
jupyterlab_gitlab/: __init__.py  gitlab.py
jupyterlab_gitlab/api/: api.yaml
schema/: drive.json
src/: browser.ts  contents.ts  gitlab.ts  index.ts
style/: base.css  index.css
